--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wedding MoJo</title>
-    <link href='https://fonts.googleapis.com/css?family=Satisfy|Caveat|Alex+Brush' rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Satisfy|Caveat|Alex+Brush|Material+Icons' rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
