--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Wedding MoJo</title>
-    <link href='https://fonts.googleapis.com/css?family=Satisfy|Caveat|Alex+Brush|Material+Icons' rel="stylesheet">
+    <title>Wedding :: Josephine & Morten</title>
+    <link href='https://fonts.googleapis.com/css?family=Karla|Lora|Alex+Brush' rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
