--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,38 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
     <title>Wedding :: Josephine & Morten</title>
+
+    <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten" />
+    <meta name="keywords" content="wedding, josephine, morten, 2020, westerliefde, Amsterdam" />
+
+    <meta name="author" content="Morten Broesby-Olsen" />
+    <meta name="copyright" content="Morten Broesby-Olsen" />
+
+    <meta name="robots" content="index,follow" />
+
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+
+    <link rel="canonical" href="https://josephinemorten.info/" />
+
+    <meta property="og:title" content="Wedding of Josephine Morten" />
+    <meta property="og:description" content="Wedding info website for the wedding of Joséphine & Morten" />
+    <meta property="og:url" content="https://josephinemorten.info/" />
+    <meta property="og:image" content="">
+    <meta property="og:type" content="website" />
+
+    <meta property="og:site_name" content="Wedding Josephine & Morten" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale:alternate" content="fr_FR" />
+    <meta property="og:locale:alternate" content="dk_DK" />
+
+    <meta name="twitter:title" content="Wedding of Josephine Morten">
+    <meta name="twitter:description" content="Wedding info website for the wedding of Joséphine & Morten">
+    <meta name="twitter:image" content="">
+    <meta name="twitter:card" content="summary" />
+
     <link href='https://fonts.googleapis.com/css?family=Karla|Lora|Alex+Brush' rel="stylesheet">
   </head>
   <body>
