--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary" />
 
-    <link href='https://fonts.googleapis.com/css?family=Karla|Lora|Alex+Brush' rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Karla|Lora|Alex+Brush|Material+Icons' rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
