--- a/src/index.html
+++ b/src/index.html
@@ -41,5 +41,15 @@
   <body>
     <div id="app"></div>
     <script src="./index.ts"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-92GSB0424R"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-92GSB0424R');
+    </script>
   </body>
 </html>
