Update index.html - better sharing metadata

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <title>Wedding :: Josephine & Morten</title>
@@ -15,7 +16,7 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten" />
+    <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020" />
     <meta name="keywords" content="wedding, josephine, morten, 2020, westerliefde, Amsterdam" />
 
     <meta name="author" content="Morten Broesby-Olsen" />
@@ -28,19 +29,19 @@
 
     <link rel="canonical" href="https://josephinemorten.info/" />
 
-    <meta property="og:title" content="Wedding of Josephine Morten" />
-    <meta property="og:description" content="Wedding info website for the wedding of Joséphine & Morten" />
+    <meta property="og:title" content="Wedding :: Josephine & Morten" />
+    <meta property="og:description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020" />
     <meta property="og:url" content="https://josephinemorten.info/" />
     <meta property="og:image" content="">
     <meta property="og:type" content="website" />
 
-    <meta property="og:site_name" content="Wedding Josephine & Morten" />
+    <meta property="og:site_name" content="Wedding :: Josephine & Morten" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:locale:alternate" content="fr_FR" />
     <meta property="og:locale:alternate" content="dk_DK" />
 
-    <meta name="twitter:title" content="Wedding of Josephine Morten">
-    <meta name="twitter:description" content="Wedding info website for the wedding of Joséphine & Morten">
+    <meta name="twitter:title" content="Wedding :: Josephine & Morten">
+    <meta name="twitter:description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020">
     <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary" />
 
