--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
 
     <title>Wedding :: Josephine & Morten</title>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#00aba9">
+    <meta name="theme-color" content="#ffffff">
+
     <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020" />
     <meta name="keywords" content="wedding, josephine, morten, 2020, westerliefde, Amsterdam" />
 
@@ -16,8 +24,9 @@
 
     <meta name="robots" content="index,follow" />
 
-    <meta http-equiv="cache-control" content="no-cache" />
-    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 
     <link rel="canonical" href="https://josephinemorten.info/" />
 
@@ -41,7 +50,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="./index.ts"></script>
+    <script src="/index.ts"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-92GSB0424R"></script>
