--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <meta name="msapplication-TileColor" content="#00aba9">
     <meta name="theme-color" content="#ffffff">
 
-    <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020" />
+    <meta name="description" content="Wedding info website for the wedding of Joséphine & Morten, 30th of October 2020" />
     <meta name="keywords" content="wedding, josephine, morten, 2020, westerliefde, Amsterdam" />
 
     <meta name="author" content="Morten Broesby-Olsen" />
@@ -31,7 +31,7 @@
     <link rel="canonical" href="https://josephinemorten.info/" />
 
     <meta property="og:title" content="Wedding :: Josephine & Morten" />
-    <meta property="og:description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020" />
+    <meta property="og:description" content="Wedding info website for the wedding of Joséphine & Morten, 30th of October 2020" />
     <meta property="og:url" content="https://josephinemorten.info/" />
     <meta property="og:image" content="">
     <meta property="og:type" content="website" />
@@ -42,7 +42,7 @@
     <meta property="og:locale:alternate" content="dk_DK" />
 
     <meta name="twitter:title" content="Wedding :: Josephine & Morten">
-    <meta name="twitter:description" content="Wedding info website for the wedding of Joséphine & Morten, 21st of March 2020">
+    <meta name="twitter:description" content="Wedding info website for the wedding of Joséphine & Morten, 30th of October 2020">
     <meta name="twitter:image" content="">
     <meta name="twitter:card" content="summary" />
 
